# python-first-project

./: .gitignore  Makefile  pyproject.toml
core/: manage.py
core/FirstProject/settings/: __init__.py  base.py
local/: settings.dev.py
